# Simple-Dynamic-Array-in-C

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: dynamic_array.c  dynamic_array.h
